<resources>
    <string name="app_name">Firebase Mobile Verification</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="alert_message">Please enter all the feild.</string>
    <string name="note_you_will_receive_an_sms_message_for_verification_and_standard_rates_apply">NOTE : You will receive an SMS message for verification and standard rates apply.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="auth_gms">417001027594-7fun2r4gd2ivgf4ff0sr73h9ut2531fn.apps.googleusercontent.com</string>
</resources>
